--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ description:    "Advanced JavaScript techniques, tips on avoiding those nasty CS
 comment:        Isn't it ironic there are no apps?
 
 author:
-    name:       Scott Kyle
+    name:       Jerry Xue
     email:      scott@appden.com
-    twitter:    appden
+    twitter:    ricegum
     
 about: >
     I'm Scott Kyle, a <a href="http://mootools.net">MooTools</a> developer
